--- a/public/watch.html
+++ b/public/watch.html
@@ -16,6 +16,15 @@
   <link rel="stylesheet" href="/styles.css?v=34" />
   <link rel="icon" href="/logo.svg" type="image/svg+xml" />
   <style>
+    /* 👇 start invisible, fade in when JS is done */
+    body{
+      opacity:0;
+      transition:opacity .25s ease-out;
+    }
+    body.ready{
+      opacity:1;
+    }
+
     :root{
       --pad: clamp(12px, 3vw, 22px);
       --primary-bg: #0f172a;
@@ -27,15 +36,13 @@
       --muted-col: #94a3b8;
       --success-col: #10b981;
     }
-    html, body{
-      margin:0; padding:0;
+    html{
       background: radial-gradient(circle at top left, var(--primary-bg), var(--secondary-bg));
-      color: var(--text-col);
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      line-height: 1.5;
     }
     a{ color: inherit; }
     .wrap{ max-width:980px; margin:0 auto; padding:var(--pad); }
+    header.header{ background: var(--secondary-bg); border-bottom:1px solid var(--border-col); }
+    header .bar{ max-width:980px; margin:0 auto; padding:var(--pad); display:flex; align-items:center; }
     .headerbar{
       display:grid;
       grid-template-columns:auto 1fr auto;
@@ -43,7 +50,6 @@
       margin-bottom:16px;
       color: var(--text-col);
     }
-    .headerbar .center{justify-self:center;}
     .badge{
       display:inline-block;
       border:1px solid var(--border-col);
@@ -57,6 +63,17 @@
       overflow:hidden;
       text-overflow:ellipsis;
     }
+    .btn{
+      display:inline-block;
+      padding:8px 14px;
+      border:1px solid var(--accent);
+      background: transparent;
+      color: var(--accent);
+      border-radius:8px;
+      text-decoration:none;
+      font-weight:500;
+    }
+    .btn:hover{ background: var(--accent); color:#fff; }
     .teams{
       display:grid;
       grid-template-columns:1fr auto 1fr;
@@ -81,33 +98,14 @@
       width:clamp(64px,14vw,96px);
       height:clamp(64px,14vw,96px);
       object-fit:contain;
-      filter: drop-shadow(0 2px 4px rgba(0,0,0,0.4));
     }
     .teamName{
       font-size:clamp(18px,4.5vw,24px);
       font-weight:600;
-      line-height:1.3;
-      color: var(--text-col);
-      white-space: normal;
-      overflow-wrap: anywhere;
-      max-width:100%;
+      white-space:normal;
+      overflow-wrap:anywhere;
     }
-    .h1{
-      font-size:clamp(28px,8vw,42px);
-      font-weight:800;
-      text-align:center;
-      letter-spacing:.08em;
-      color: var(--accent);
-    }
-    .muted{ color: var(--muted-col); }
-    .statusBig{
-      margin-top:8px;
-      margin-bottom:6px;
-      text-align:center;
-      font-size:18px;
-      font-weight:500;
-      color: var(--accent);
-    }
+    .h1{ font-size:clamp(28px,8vw,42px); font-weight:800; color:var(--accent); }
     .meta{
       display:grid;
       grid-template-columns:repeat(3,minmax(0,1fr));
@@ -117,100 +115,30 @@
       border:1px solid var(--border-col);
       border-radius:16px;
       padding:16px;
-      box-shadow:0 4px 8px rgba(0,0,0,0.3);
     }
-    @media(max-width:720px){ .meta{grid-template-columns:repeat(2,minmax(0,1fr));} }
+    @media(max-width:720px){ .meta{grid-template-columns:repeat(2,minmax(0,1fr));} .teams{grid-template-columns:1fr;} }
+    .muted{ color: var(--muted-col); }
+    .statusBig{ text-align:center; margin-top:8px; margin-bottom:6px; color:var(--accent); }
     .serverbar{
       display:flex;
-      flex-wrap:wrap;
       gap:14px;
+      flex-wrap:wrap;
       justify-content:center;
-      margin:18px 0 4px;
       background: var(--secondary-bg);
       border:1px solid var(--border-col);
       border-radius:16px;
       padding:16px;
-      box-shadow:0 4px 8px rgba(0,0,0,0.3);
+      margin-bottom:18px;
     }
     .serverbar .sbtn{
       display:inline-flex;
-      align-items:center;
-      justify-content:center;
       min-width:120px;
-      border-radius:12px;
-      padding:12px 18px;
-      text-decoration:none;
-      color:var(--text-col);
-      background: linear-gradient(135deg, var(--accent) 0%, var(--accent-hover) 100%);
-      transition: background 0.3s ease, transform 0.1s ease;
-      font-weight:500;
-    }
-    .serverbar .sbtn:hover{
-      background: linear-gradient(135deg, var(--accent-hover) 0%, var(--accent) 100%);
-      transform: translateY(-2px);
-    }
-    .loading{
-      position:fixed;
-      inset:0;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
       justify-content:center;
-      background:rgba(5,12,23,0.8);
-      backdrop-filter:saturate(120%) blur(4px);
-      z-index:50;
-      transition:opacity .25s ease;
-    }
-    .loading.hidden{ opacity:0; pointer-events:none; }
-    .spinner{
-      position:relative;
-      width:74px;
-      height:74px;
-      margin-bottom:10px;
-    }
-    .ring{
-      position:absolute;
-      inset:0;
-      border-radius:50%;
-      border:4px solid rgba(255,255,255,.1);
-      border-top-color: var(--accent);
-      animation:spin 1s linear infinite;
-    }
-    .dot{
-      position:absolute;
-      top:50%; left:50%;
-      width:16px; height:16px;
-      background: var(--success-col);
-      border-radius:50%;
-      transform:translate(-50%,-50%);
-      animation:pulse 1.4s ease-in-out infinite;
-    }
-    .loadingText{ font-size:14px; color: var(--muted-col); }
-    @keyframes spin{ to{ transform:rotate(360deg) } }
-    @keyframes pulse{ 0%,100%{ transform:translate(-50%,-50%) scale(.85); opacity:.85 } 50%{ transform:translate(-50%,-50%) scale(1.1); opacity:1 } }
-    @media(max-width:600px){ #leagueBadge{ display:none; } }
-    .btn{
-      display:inline-block;
-      padding:8px 14px;
-      border:1px solid var(--accent);
-      background: transparent;
-      color: var(--accent);
-      border-radius:8px;
+      padding:11px 18px;
+      border-radius:12px;
+      background: linear-gradient(135deg, var(--accent) 0%, var(--accent-hover) 100%);
+      color:#fff;
       text-decoration:none;
-      font-weight:500;
-      transition: background 0.25s ease, color 0.25s ease;
-    }
-    .btn:hover{ background: var(--accent); color:#ffffff; }
-    header.header{
-      background: var(--secondary-bg);
-      border-bottom:1px solid var(--border-col);
-    }
-    header .bar{
-      max-width:980px;
-      margin:0 auto;
-      padding: var(--pad);
-      display:flex;
-      align-items:center;
     }
   </style>
 </head>
@@ -222,26 +150,26 @@
   </div>
 </header>
 
-<!-- loading overlay FIRST -->
-<div id="loadingOverlay" class="loading" aria-live="polite" aria-busy="true">
-  <div class="spinner"><div class="ring"></div><div class="dot"></div></div>
-  <div class="loadingText">Loading match…</div>
-</div>
-
-<!-- actual page hidden until JS calls hideLoading() -->
-<main id="contentWrap" class="wrap" style="display:none">
+<main class="wrap">
   <div class="headerbar">
-    <a class="btn" href="/" aria-label="Back to schedule">← Back</a>
-    <div class="center"></div>
+    <a class="btn" href="/">← Back</a>
+    <div></div>
     <span id="leagueBadge" class="badge"></span>
   </div>
 
   <div class="teams">
-    <div class="side home"><img id="homeLogo" alt="" width="64" height="64" loading="lazy"/><span class="teamName" id="homeName"></span></div>
-    <div class="h1" id="versus">VS</div>
-    <div class="side away"><img id="awayLogo" alt="" width="64" height="64" loading="lazy"/><span class="teamName" id="awayName"></span></div>
+    <div class="side">
+      <img id="homeLogo" src="/logo.svg" alt="">
+      <div id="homeName" class="teamName"></div>
+    </div>
+    <div class="h1">VS</div>
+    <div class="side">
+      <img id="awayLogo" src="/logo.svg" alt="">
+      <div id="awayName" class="teamName"></div>
+    </div>
   </div>
-  <div class="muted statusBig" id="statusLine" style="text-align:center"></div>
+
+  <div id="statusLine" class="statusBig"></div>
 
   <div class="meta">
     <div><span class="muted small">Kickoff</span><div id="kickoff">-</div></div>
@@ -254,44 +182,37 @@
 
 <script>
   const $ = id => document.getElementById(id);
-  let __loadFailTimer = null;
-
-  function hideLoading(){
-    try{ $('loadingOverlay').classList.add('hidden'); }catch(e){}
-    try{ $('contentWrap').style.display = 'block'; }catch(e){}
-    if(__loadFailTimer){ clearTimeout(__loadFailTimer); __loadFailTimer = null; }
-  }
 
   function qs(name){ return new URLSearchParams(location.search).get(name) || ''; }
   function slug(s){ return String(s||'').toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/(^-|-$)/g,''); }
-  function capWords(s){ return String(s||'').split(/[-\s]+/).map(w => w? w[0].toUpperCase()+w.slice(1):'').join(' '); }
+  function capWords(s){ return String(s||'').split(/[-\s]+/).map(w=>w?w[0].toUpperCase()+w.slice(1):'').join(' '); }
   function addDaysISO(iso, n){ const d = new Date(iso); d.setDate(d.getDate()+n); return d.toISOString().slice(0,10); }
   function isoToYMD(iso){ return iso.replace(/-/g,''); }
 
   function formatStatus(status){
     const raw = String(status || '').toUpperCase();
-    const livePatterns = ['IN_PLAY','LIVE','PLAYING','1ST HALF','FIRST HALF','2ND HALF','SECOND HALF'];
-    for (const p of livePatterns){ if (raw.includes(p)) return 'Live'; }
-    const halfPatterns = ['HALF-TIME','HALFTIME','HT','HALF TIME','PAUSED'];
-    for (const p of halfPatterns){ if (raw.includes(p)) return 'Half Time'; }
-    const finPatterns = ['FINISHED','FULL-TIME','FT','FINAL','ENDED'];
-    for (const p of finPatterns){ if (raw.includes(p)) return 'Finished'; }
-    const schedPatterns = ['SCHEDULED','NOT_STARTED','NS'];
-    for (const p of schedPatterns){ if (raw.includes(p)) return 'Scheduled'; }
+    const live = ['IN_PLAY','LIVE','PLAYING','1ST HALF','2ND HALF','FIRST HALF','SECOND HALF'];
+    if (live.some(p=>raw.includes(p))) return 'Live';
+    const half = ['HALF-TIME','HALFTIME','HT','PAUSED'];
+    if (half.some(p=>raw.includes(p))) return 'Half Time';
+    const fin = ['FINISHED','FULL-TIME','FT','FINAL','ENDED'];
+    if (fin.some(p=>raw.includes(p))) return 'Finished';
+    const sched = ['SCHEDULED','NOT_STARTED','NS'];
+    if (sched.some(p=>raw.includes(p))) return 'Scheduled';
     return status || '';
   }
 
-  function renderServerButtonsFromSlug(sl){
-    const bar = $('serverBar'); if (!bar) return;
-    const labels = ['Server 1','Server 2','Server 3','Server 4','Server 5'];
+  function renderServers(slugStr){
+    const bar = $('serverBar');
     const url = 'https://crutchanalyse.com/w2n5uxyv5?key=421e53b34da32e5044e25f26baddab45';
-    bar.innerHTML = labels.map(l => `<a class="sbtn" href="${url}" target="_blank" rel="noopener">${l}</a>`).join('');
+    const labels = ['Server 1','Server 2','Server 3','Server 4','Server 5'];
+    bar.innerHTML = labels.map(l=>`<a class="sbtn" href="${url}" target="_blank" rel="noopener">${l}</a>`).join('');
   }
 
-  function matchSlug(slugPart, fx){
-    const homeSlug = slug(fx.home?.name || '');
-    const awaySlug = slug(fx.away?.name || '');
-    return slugPart === `${homeSlug}-vs-${awaySlug}` || slugPart === `${awaySlug}-vs-${homeSlug}`;
+  function matchSlug(sl, fx){
+    const h = slug(fx.home?.name || '');
+    const a = slug(fx.away?.name || '');
+    return sl === `${h}-vs-${a}` || sl === `${a}-vs-${h}`;
   }
 
   async function fixturesFor(isoDate){
@@ -304,9 +225,9 @@
       try{
         const r = await fetch(u, {cache:'no-store'});
         if (!r.ok) continue;
-        const text = await r.text();
+        const t = await r.text();
         let data;
-        try { data = JSON.parse(text); } catch(e){ continue; }
+        try { data = JSON.parse(t); } catch { continue; }
         if (Array.isArray(data)) return data;
         if (data && Array.isArray(data.fixtures)) return data.fixtures;
       }catch(e){}
@@ -317,63 +238,55 @@
   function applyFixture(fx){
     const homeName = fx.home?.name || 'Home';
     const awayName = fx.away?.name || 'Away';
-    const homeLogo = fx.home?.logo || '/logo.svg';
-    const awayLogo = fx.away?.logo || '/logo.svg';
-    const league   = fx.league?.name || '';
-    const statusRaw = fx.status || 'SCHEDULED';
-    const kickoff  = fx.start_utc || '';
-
     $('homeName').textContent = homeName;
     $('awayName').textContent = awayName;
-    $('homeLogo').src = homeLogo;
-    $('awayLogo').src = awayLogo;
-    $('leagueBadge').textContent = league || '';
-    $('league').textContent = league || '-';
-    const friendlyStatus = formatStatus(statusRaw);
-    $('state').textContent = friendlyStatus || '-';
-    $('statusLine').textContent = friendlyStatus || '';
-    $('kickoff').textContent = kickoff ? new Date(kickoff).toLocaleString() : '-';
-
-    renderServerButtonsFromSlug(slug(homeName + '-vs-' + awayName));
-    hideLoading();
+    $('homeLogo').src = fx.home?.logo || '/logo.svg';
+    $('awayLogo').src = fx.away?.logo || '/logo.svg';
+    $('league').textContent = fx.league?.name || '-';
+    $('leagueBadge').textContent = fx.league?.name || '';
+    const friendly = formatStatus(fx.status);
+    $('state').textContent = friendly || '-';
+    $('statusLine').textContent = friendly || '';
+    $('kickoff').textContent = fx.start_utc ? new Date(fx.start_utc).toLocaleString() : '-';
+    renderServers(slug(homeName + '-vs-' + awayName));
   }
 
   async function load(){
-    __loadFailTimer = setTimeout(hideLoading, 4000); // safety timeout
-
-    const rawId = qs('id') || qs('m') || '';
-    if (!rawId){ $('statusLine').textContent='Missing match id'; hideLoading(); return; }
-
-    // prefill names
-    const pureSlug = rawId.includes('@') ? rawId.split('@')[0] : rawId;
-    const parts = pureSlug.split('-vs-');
-    if (parts.length === 2){
-      $('homeName').textContent = capWords(parts[0]);
-      $('awayName').textContent = capWords(parts[1]);
-      renderServerButtonsFromSlug(pureSlug);
+    const raw = qs('id') || qs('m') || '';
+    // prefill while hidden so when we show, it already has names
+    if (raw){
+      const pure = raw.includes('@') ? raw.split('@')[0] : raw;
+      const parts = pure.split('-vs-');
+      if (parts.length === 2){
+        $('homeName').textContent = capWords(parts[0]);
+        $('awayName').textContent = capWords(parts[1]);
+        renderServers(pure);
+      } else {
+        $('homeName').textContent = capWords(pure);
+        renderServers(pure);
+      }
     }
 
-    const baseISO = rawId.includes('@')
-      ? rawId.split('@')[1].replace(/(\\d{4})(\\d{2})(\\d{2})/, '$1-$2-$3')
+    // fetch actual data
+    const baseISO = raw.includes('@')
+      ? raw.split('@')[1].replace(/(\\d{4})(\\d{2})(\\d{2})/, '$1-$2-$3')
       : new Date().toISOString().slice(0,10);
 
-    const slugPart = slug(pureSlug);
+    const slugPart = slug(raw.includes('@') ? raw.split('@')[0] : raw);
 
     const days = [-2,-1,0,1,2];
     let found = null;
     for (const off of days){
-      const dateISO = addDaysISO(baseISO, off);
-      const list = await fixturesFor(dateISO);
+      const iso = addDaysISO(baseISO, off);
+      const list = await fixturesFor(iso);
       const hit = list.find(fx => matchSlug(slugPart, fx));
       if (hit){ found = hit; break; }
     }
 
-    if (found){
-      applyFixture(found);
-    } else {
-      // no match: just show the page with prefilled names
-      hideLoading();
-    }
+    if (found) applyFixture(found);
+
+    // finally show page
+    document.body.classList.add('ready');
   }
 
   load();
