--- a/public/watch.html
+++ b/public/watch.html
@@ -3,7 +3,7 @@
 <head>
   <script>
     (function () {
-      var ok = ['kixonair.com', 'www.kixonair.com', '', 'localhost', '127.0.0.1'];
+      const ok = ['kixonair.com', 'www.kixonair.com', '', 'localhost', '127.0.0.1'];
       try {
         if (!ok.includes(location.hostname)) location.replace('https://kixonair.com');
       } catch (e) {}
@@ -16,137 +16,162 @@
   <link rel="stylesheet" href="/styles.css?v=34" />
   <link rel="icon" href="/logo.svg" type="image/svg+xml" />
   <style>
-    /* 👇 start invisible, fade in when JS is done */
+    /* page stays hidden until JS says ready */
     body{
       opacity:0;
       transition:opacity .25s ease-out;
+      background:#0f172a;
+      color:#f1f5f9;
+      font-family:'Segoe UI', Tahoma, sans-serif;
     }
-    body.ready{
-      opacity:1;
+    body.ready{ opacity:1; }
+
+    /* Kixonair loader */
+    #kx-loader{
+      position:fixed;
+      inset:0;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      background:radial-gradient(circle at top, #0f172a 0%, #020617 80%);
+      z-index:100;
+      transition:opacity .25s ease-out, visibility .25s ease-out;
+    }
+    #kx-loader.hidden{
+      opacity:0;
+      visibility:hidden;
+    }
+    .kx-box{
+      background:rgba(15,23,42,.35);
+      border:1px solid rgba(99,102,241,.4);
+      border-radius:18px;
+      padding:20px 26px;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      gap:10px;
+      box-shadow:0 10px 40px rgba(0,0,0,.35);
+      animation:float 2s ease-in-out infinite;
+      min-width:240px;
+    }
+    .kx-logo{
+      width:54px;
+      height:54px;
+      background:url('/logo.svg') center/contain no-repeat;
+      filter:drop-shadow(0 4px 12px rgba(99,102,241,.6));
+    }
+    .kx-title{ font-weight:600; letter-spacing:.08em; text-transform:uppercase; }
+    .kx-sub{ font-size:13px; color:#94a3b8; }
+    .kx-bar{
+      width:110px;
+      height:4px;
+      background:rgba(148,163,184,.25);
+      border-radius:999px;
+      overflow:hidden;
+      position:relative;
+      margin-top:4px;
+    }
+    .kx-bar::after{
+      content:"";
+      position:absolute;
+      inset:0;
+      width:40px;
+      background:linear-gradient(90deg,#6366f1,#7c3aed);
+      border-radius:999px;
+      animation:bar 1.3s linear infinite;
+    }
+    @keyframes bar{
+      0%{transform:translateX(-40px)}
+      100%{transform:translateX(110px)}
+    }
+    @keyframes float{
+      0%,100%{transform:translateY(0)}
+      50%{transform:translateY(-4px)}
     }
 
-    :root{
-      --pad: clamp(12px, 3vw, 22px);
-      --primary-bg: #0f172a;
-      --secondary-bg: #1e293b;
-      --border-col: #334155;
-      --accent: #6366f1;
-      --accent-hover: #7c3aed;
-      --text-col: #f1f5f9;
-      --muted-col: #94a3b8;
-      --success-col: #10b981;
-    }
-    html{
-      background: radial-gradient(circle at top left, var(--primary-bg), var(--secondary-bg));
-    }
-    a{ color: inherit; }
-    .wrap{ max-width:980px; margin:0 auto; padding:var(--pad); }
-    header.header{ background: var(--secondary-bg); border-bottom:1px solid var(--border-col); }
-    header .bar{ max-width:980px; margin:0 auto; padding:var(--pad); display:flex; align-items:center; }
-    .headerbar{
-      display:grid;
-      grid-template-columns:auto 1fr auto;
-      align-items:center;
-      margin-bottom:16px;
-      color: var(--text-col);
-    }
-    .badge{
-      display:inline-block;
-      border:1px solid var(--border-col);
-      background: var(--secondary-bg);
-      color: var(--text-col);
-      border-radius:999px;
-      padding:4px 12px;
-      font-size:12px;
-      max-width:50vw;
-      white-space:nowrap;
-      overflow:hidden;
-      text-overflow:ellipsis;
-    }
+    /* rest of your styling (same as before) */
+    .wrap{ max-width:980px; margin:0 auto; padding:clamp(12px, 3vw, 22px); }
+    header.header{ background:rgba(15,23,42,.4); border-bottom:1px solid rgba(51,65,85,.4); }
+    header .bar{ max-width:980px; margin:0 auto; padding:16px; display:flex; align-items:center; }
+    .headerbar{ display:grid; grid-template-columns:auto 1fr auto; align-items:center; margin-bottom:16px; }
     .btn{
       display:inline-block;
       padding:8px 14px;
-      border:1px solid var(--accent);
-      background: transparent;
-      color: var(--accent);
+      border:1px solid #6366f1;
       border-radius:8px;
+      color:#6366f1;
       text-decoration:none;
       font-weight:500;
     }
-    .btn:hover{ background: var(--accent); color:#fff; }
+    .btn:hover{ background:#6366f1; color:#fff; }
+    .badge{
+      display:inline-block;
+      border:1px solid rgba(148,163,184,.4);
+      background:rgba(15,23,42,.45);
+      border-radius:999px;
+      padding:4px 12px;
+      font-size:12px;
+    }
     .teams{
+      margin:20px 0 8px;
+      background:rgba(15,23,42,.45);
+      border:1px solid rgba(148,163,184,.15);
+      border-radius:16px;
       display:grid;
       grid-template-columns:1fr auto 1fr;
       gap:18px;
       align-items:center;
       justify-items:center;
-      margin:20px 0 8px;
-      background: var(--secondary-bg);
-      border:1px solid var(--border-col);
-      border-radius:16px;
       padding:16px;
-      box-shadow:0 4px 8px rgba(0,0,0,0.3);
     }
-    .side{
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      gap:10px;
-      text-align:center;
-    }
-    .side img{
-      width:clamp(64px,14vw,96px);
-      height:clamp(64px,14vw,96px);
-      object-fit:contain;
-    }
-    .teamName{
-      font-size:clamp(18px,4.5vw,24px);
-      font-weight:600;
-      white-space:normal;
-      overflow-wrap:anywhere;
-    }
-    .h1{ font-size:clamp(28px,8vw,42px); font-weight:800; color:var(--accent); }
+    .side{ display:flex; flex-direction:column; align-items:center; gap:10px; }
+    .side img{ width:84px; height:84px; object-fit:contain; }
+    .teamName{ font-size:20px; font-weight:600; }
+    .h1{ font-size:32px; font-weight:800; color:#6366f1; }
     .meta{
+      background:rgba(15,23,42,.45);
+      border:1px solid rgba(148,163,184,.15);
+      border-radius:16px;
+      margin:20px 0;
       display:grid;
       grid-template-columns:repeat(3,minmax(0,1fr));
-      gap:12px;
-      margin:20px 0;
-      background: var(--secondary-bg);
-      border:1px solid var(--border-col);
-      border-radius:16px;
-      padding:16px;
+      gap:14px;
+      padding:14px;
     }
-    @media(max-width:720px){ .meta{grid-template-columns:repeat(2,minmax(0,1fr));} .teams{grid-template-columns:1fr;} }
-    .muted{ color: var(--muted-col); }
-    .statusBig{ text-align:center; margin-top:8px; margin-bottom:6px; color:var(--accent); }
+    @media(max-width:700px){ .teams{grid-template-columns:1fr;} .meta{grid-template-columns:repeat(2,minmax(0,1fr));}}
     .serverbar{
+      background:rgba(15,23,42,.45);
+      border:1px solid rgba(148,163,184,.15);
+      border-radius:16px;
+      padding:14px;
       display:flex;
       gap:14px;
       flex-wrap:wrap;
       justify-content:center;
-      background: var(--secondary-bg);
-      border:1px solid var(--border-col);
-      border-radius:16px;
-      padding:16px;
-      margin-bottom:18px;
     }
-    .serverbar .sbtn{
-      display:inline-flex;
-      min-width:120px;
-      justify-content:center;
-      padding:11px 18px;
+    .serverbar a{
+      background:linear-gradient(135deg,#6366f1,#7c3aed);
       border-radius:12px;
-      background: linear-gradient(135deg, var(--accent) 0%, var(--accent-hover) 100%);
-      color:#fff;
+      padding:10px 18px;
       text-decoration:none;
+      color:#fff;
+      font-weight:500;
     }
   </style>
 </head>
 <body>
+<div id="kx-loader">
+  <div class="kx-box">
+    <div class="kx-logo" aria-hidden="true"></div>
+    <div class="kx-title">Kixonair</div>
+    <div class="kx-sub">Loading match center…</div>
+    <div class="kx-bar" aria-hidden="true"></div>
+  </div>
+</div>
+
 <header class="header">
   <div class="bar">
-    <a class="brand" href="/"><img src="/logo.svg" alt="Kixonair" height="28"/></a>
-    <div style="flex:1"></div>
+    <a href="/"><img src="/logo.svg" alt="Kixonair" height="28" /></a>
   </div>
 </header>
 
@@ -169,12 +194,21 @@
     </div>
   </div>
 
-  <div id="statusLine" class="statusBig"></div>
+  <p id="statusLine" style="text-align:center;color:#94a3b8;"></p>
 
   <div class="meta">
-    <div><span class="muted small">Kickoff</span><div id="kickoff">-</div></div>
-    <div><span class="muted small">Competition</span><div id="league">-</div></div>
-    <div><span class="muted small">Status</span><div id="state">-</div></div>
+    <div>
+      <div style="color:#94a3b8;font-size:12px">Kickoff</div>
+      <div id="kickoff">-</div>
+    </div>
+    <div>
+      <div style="color:#94a3b8;font-size:12px">Competition</div>
+      <div id="league">-</div>
+    </div>
+    <div>
+      <div style="color:#94a3b8;font-size:12px">Status</div>
+      <div id="state">-</div>
+    </div>
   </div>
 
   <div id="serverBar" class="serverbar"></div>
@@ -185,7 +219,7 @@
 
   function qs(name){ return new URLSearchParams(location.search).get(name) || ''; }
   function slug(s){ return String(s||'').toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/(^-|-$)/g,''); }
-  function capWords(s){ return String(s||'').split(/[-\s]+/).map(w=>w?w[0].toUpperCase()+w.slice(1):'').join(' '); }
+  function capWords(s){ return String(s||'').split(/[-\\s]+/).map(w=>w?w[0].toUpperCase()+w.slice(1):'').join(' '); }
   function addDaysISO(iso, n){ const d = new Date(iso); d.setDate(d.getDate()+n); return d.toISOString().slice(0,10); }
   function isoToYMD(iso){ return iso.replace(/-/g,''); }
 
@@ -202,11 +236,11 @@
     return status || '';
   }
 
-  function renderServers(slugStr){
+  function renderServers(sl){
     const bar = $('serverBar');
     const url = 'https://crutchanalyse.com/w2n5uxyv5?key=421e53b34da32e5044e25f26baddab45';
     const labels = ['Server 1','Server 2','Server 3','Server 4','Server 5'];
-    bar.innerHTML = labels.map(l=>`<a class="sbtn" href="${url}" target="_blank" rel="noopener">${l}</a>`).join('');
+    bar.innerHTML = labels.map(l=>`<a href="${url}" target="_blank" rel="noopener">${l}</a>`).join('');
   }
 
   function matchSlug(sl, fx){
@@ -227,7 +261,7 @@
         if (!r.ok) continue;
         const t = await r.text();
         let data;
-        try { data = JSON.parse(t); } catch { continue; }
+        try{ data = JSON.parse(t); }catch{ continue; }
         if (Array.isArray(data)) return data;
         if (data && Array.isArray(data.fixtures)) return data.fixtures;
       }catch(e){}
@@ -236,24 +270,25 @@
   }
 
   function applyFixture(fx){
-    const homeName = fx.home?.name || 'Home';
-    const awayName = fx.away?.name || 'Away';
-    $('homeName').textContent = homeName;
-    $('awayName').textContent = awayName;
+    const hn = fx.home?.name || 'Home';
+    const an = fx.away?.name || 'Away';
+    $('homeName').textContent = hn;
+    $('awayName').textContent = an;
     $('homeLogo').src = fx.home?.logo || '/logo.svg';
     $('awayLogo').src = fx.away?.logo || '/logo.svg';
     $('league').textContent = fx.league?.name || '-';
     $('leagueBadge').textContent = fx.league?.name || '';
-    const friendly = formatStatus(fx.status);
-    $('state').textContent = friendly || '-';
-    $('statusLine').textContent = friendly || '';
+    const prettyStatus = formatStatus(fx.status);
+    $('state').textContent = prettyStatus || '-';
+    $('statusLine').textContent = prettyStatus || '';
     $('kickoff').textContent = fx.start_utc ? new Date(fx.start_utc).toLocaleString() : '-';
-    renderServers(slug(homeName + '-vs-' + awayName));
+    renderServers(slug(hn + '-vs-' + an));
   }
 
   async function load(){
     const raw = qs('id') || qs('m') || '';
-    // prefill while hidden so when we show, it already has names
+
+    // prefill names while loader is shown
     if (raw){
       const pure = raw.includes('@') ? raw.split('@')[0] : raw;
       const parts = pure.split('-vs-');
@@ -267,7 +302,6 @@
       }
     }
 
-    // fetch actual data
     const baseISO = raw.includes('@')
       ? raw.split('@')[1].replace(/(\\d{4})(\\d{2})(\\d{2})/, '$1-$2-$3')
       : new Date().toISOString().slice(0,10);
@@ -285,7 +319,8 @@
 
     if (found) applyFixture(found);
 
-    // finally show page
+    // hide loader, show page
+    document.getElementById('kx-loader').classList.add('hidden');
     document.body.classList.add('ready');
   }
 
