--- a/public/watch.html
+++ b/public/watch.html
@@ -16,129 +16,85 @@
   <link rel="stylesheet" href="/styles.css?v=34" />
   <link rel="icon" href="/logo.svg" type="image/svg+xml" />
   <style>
-    /* page stays hidden until JS says ready */
     body{
-      opacity:0;
-      transition:opacity .25s ease-out;
+      margin:0;
       background:#0f172a;
       color:#f1f5f9;
       font-family:'Segoe UI', Tahoma, sans-serif;
     }
-    body.ready{ opacity:1; }
 
-    /* Kixonair loader */
+    /* simple loader, always visible at start */
     #kx-loader{
       position:fixed;
       inset:0;
+      background:#0f172a;
       display:flex;
       align-items:center;
       justify-content:center;
-      background:radial-gradient(circle at top, #0f172a 0%, #020617 80%);
       z-index:100;
-      transition:opacity .25s ease-out, visibility .25s ease-out;
     }
     #kx-loader.hidden{
-      opacity:0;
-      visibility:hidden;
+      display:none;
     }
-    .kx-box{
+    .kx-panel{
       background:rgba(15,23,42,.35);
-      border:1px solid rgba(99,102,241,.4);
-      border-radius:18px;
+      border:1px solid rgba(148,163,184,.35);
+      border-radius:16px;
       padding:20px 26px;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      gap:10px;
-      box-shadow:0 10px 40px rgba(0,0,0,.35);
-      animation:float 2s ease-in-out infinite;
-      min-width:240px;
+      text-align:center;
+      min-width:220px;
     }
     .kx-logo{
       width:54px;
       height:54px;
       background:url('/logo.svg') center/contain no-repeat;
-      filter:drop-shadow(0 4px 12px rgba(99,102,241,.6));
+      margin:0 auto 8px;
     }
-    .kx-title{ font-weight:600; letter-spacing:.08em; text-transform:uppercase; }
-    .kx-sub{ font-size:13px; color:#94a3b8; }
-    .kx-bar{
-      width:110px;
-      height:4px;
-      background:rgba(148,163,184,.25);
-      border-radius:999px;
-      overflow:hidden;
-      position:relative;
-      margin-top:4px;
-    }
-    .kx-bar::after{
-      content:"";
-      position:absolute;
-      inset:0;
-      width:40px;
-      background:linear-gradient(90deg,#6366f1,#7c3aed);
-      border-radius:999px;
-      animation:bar 1.3s linear infinite;
-    }
-    @keyframes bar{
-      0%{transform:translateX(-40px)}
-      100%{transform:translateX(110px)}
-    }
-    @keyframes float{
-      0%,100%{transform:translateY(0)}
-      50%{transform:translateY(-4px)}
+    .kx-title{font-weight:600;}
+    .kx-sub{font-size:13px;color:#94a3b8;}
+
+    /* main page hidden initially */
+    #page{
+      display:none;
     }
 
-    /* rest of your styling (same as before) */
-    .wrap{ max-width:980px; margin:0 auto; padding:clamp(12px, 3vw, 22px); }
-    header.header{ background:rgba(15,23,42,.4); border-bottom:1px solid rgba(51,65,85,.4); }
+    .wrap{ max-width:980px; margin:0 auto; padding:clamp(12px,3vw,22px); }
+    header.header{ background:rgba(15,23,42,.35); border-bottom:1px solid rgba(51,65,85,.4); }
     header .bar{ max-width:980px; margin:0 auto; padding:16px; display:flex; align-items:center; }
     .headerbar{ display:grid; grid-template-columns:auto 1fr auto; align-items:center; margin-bottom:16px; }
-    .btn{
-      display:inline-block;
-      padding:8px 14px;
-      border:1px solid #6366f1;
-      border-radius:8px;
-      color:#6366f1;
-      text-decoration:none;
-      font-weight:500;
-    }
+    .btn{ display:inline-block; padding:8px 14px; border:1px solid #6366f1; border-radius:8px; color:#6366f1; text-decoration:none; font-weight:500; }
     .btn:hover{ background:#6366f1; color:#fff; }
-    .badge{
-      display:inline-block;
-      border:1px solid rgba(148,163,184,.4);
-      background:rgba(15,23,42,.45);
-      border-radius:999px;
-      padding:4px 12px;
-      font-size:12px;
-    }
+    .badge{ display:inline-block; padding:4px 12px; border-radius:999px; border:1px solid rgba(148,163,184,.35); background:rgba(15,23,42,.45); font-size:12px; }
     .teams{
-      margin:20px 0 8px;
-      background:rgba(15,23,42,.45);
-      border:1px solid rgba(148,163,184,.15);
-      border-radius:16px;
       display:grid;
       grid-template-columns:1fr auto 1fr;
       gap:18px;
       align-items:center;
       justify-items:center;
-      padding:16px;
-    }
-    .side{ display:flex; flex-direction:column; align-items:center; gap:10px; }
-    .side img{ width:84px; height:84px; object-fit:contain; }
-    .teamName{ font-size:20px; font-weight:600; }
-    .h1{ font-size:32px; font-weight:800; color:#6366f1; }
-    .meta{
       background:rgba(15,23,42,.45);
       border:1px solid rgba(148,163,184,.15);
       border-radius:16px;
-      margin:20px 0;
+      padding:16px;
+      margin:20px 0 8px;
+    }
+    .side{ display:flex; flex-direction:column; align-items:center; gap:10px; }
+    .side img{ width:80px; height:80px; object-fit:contain; }
+    .teamName{ font-size:20px; font-weight:600; white-space:normal; overflow-wrap:anywhere; text-align:center; }
+    .h1{ font-size:32px; font-weight:800; color:#6366f1; }
+    .meta{
       display:grid;
       grid-template-columns:repeat(3,minmax(0,1fr));
       gap:14px;
+      background:rgba(15,23,42,.45);
+      border:1px solid rgba(148,163,184,.15);
+      border-radius:16px;
       padding:14px;
+      margin:18px 0;
     }
-    @media(max-width:700px){ .teams{grid-template-columns:1fr;} .meta{grid-template-columns:repeat(2,minmax(0,1fr));}}
+    @media(max-width:700px){
+      .teams{grid-template-columns:1fr;}
+      .meta{grid-template-columns:repeat(2,minmax(0,1fr));}
+    }
     .serverbar{
       background:rgba(15,23,42,.45);
       border:1px solid rgba(148,163,184,.15);
@@ -160,59 +116,64 @@
   </style>
 </head>
 <body>
+
+<!-- loader -->
 <div id="kx-loader">
-  <div class="kx-box">
+  <div class="kx-panel">
     <div class="kx-logo" aria-hidden="true"></div>
     <div class="kx-title">Kixonair</div>
-    <div class="kx-sub">Loading match center…</div>
-    <div class="kx-bar" aria-hidden="true"></div>
+    <div class="kx-sub">Loading match…</div>
   </div>
 </div>
 
-<header class="header">
-  <div class="bar">
-    <a href="/"><img src="/logo.svg" alt="Kixonair" height="28" /></a>
-  </div>
-</header>
-
-<main class="wrap">
-  <div class="headerbar">
-    <a class="btn" href="/">← Back</a>
-    <div></div>
-    <span id="leagueBadge" class="badge"></span>
-  </div>
-
-  <div class="teams">
-    <div class="side">
-      <img id="homeLogo" src="/logo.svg" alt="">
-      <div id="homeName" class="teamName"></div>
+<!-- actual page -->
+<div id="page">
+  <header class="header">
+    <div class="bar">
+      <a href="/"><img src="/logo.svg" alt="Kixonair" height="28" /></a>
+      <div style="flex:1"></div>
     </div>
-    <div class="h1">VS</div>
-    <div class="side">
-      <img id="awayLogo" src="/logo.svg" alt="">
-      <div id="awayName" class="teamName"></div>
-    </div>
-  </div>
+  </header>
 
-  <p id="statusLine" style="text-align:center;color:#94a3b8;"></p>
+  <main class="wrap">
+    <div class="headerbar">
+      <a class="btn" href="/">← Back</a>
+      <div></div>
+      <span id="leagueBadge" class="badge"></span>
+    </div>
 
-  <div class="meta">
-    <div>
-      <div style="color:#94a3b8;font-size:12px">Kickoff</div>
-      <div id="kickoff">-</div>
+    <div class="teams">
+      <div class="side">
+        <img id="homeLogo" src="/logo.svg" alt="">
+        <div id="homeName" class="teamName"></div>
+      </div>
+      <div class="h1">VS</div>
+      <div class="side">
+        <img id="awayLogo" src="/logo.svg" alt="">
+        <div id="awayName" class="teamName"></div>
+      </div>
     </div>
-    <div>
-      <div style="color:#94a3b8;font-size:12px">Competition</div>
-      <div id="league">-</div>
-    </div>
-    <div>
-      <div style="color:#94a3b8;font-size:12px">Status</div>
-      <div id="state">-</div>
-    </div>
-  </div>
 
-  <div id="serverBar" class="serverbar"></div>
-</main>
+    <p id="statusLine" style="text-align:center;color:#94a3b8;"></p>
+
+    <div class="meta">
+      <div>
+        <div style="color:#94a3b8;font-size:12px">Kickoff</div>
+        <div id="kickoff">-</div>
+      </div>
+      <div>
+        <div style="color:#94a3b8;font-size:12px">Competition</div>
+        <div id="league">-</div>
+      </div>
+      <div>
+        <div style="color:#94a3b8;font-size:12px">Status</div>
+        <div id="state">-</div>
+      </div>
+    </div>
+
+    <div id="serverBar" class="serverbar"></div>
+  </main>
+</div>
 
 <script>
   const $ = id => document.getElementById(id);
@@ -222,7 +183,6 @@
   function capWords(s){ return String(s||'').split(/[-\\s]+/).map(w=>w?w[0].toUpperCase()+w.slice(1):'').join(' '); }
   function addDaysISO(iso, n){ const d = new Date(iso); d.setDate(d.getDate()+n); return d.toISOString().slice(0,10); }
   function isoToYMD(iso){ return iso.replace(/-/g,''); }
-
   function formatStatus(status){
     const raw = String(status || '').toUpperCase();
     const live = ['IN_PLAY','LIVE','PLAYING','1ST HALF','2ND HALF','FIRST HALF','SECOND HALF'];
@@ -235,20 +195,17 @@
     if (sched.some(p=>raw.includes(p))) return 'Scheduled';
     return status || '';
   }
-
   function renderServers(sl){
     const bar = $('serverBar');
     const url = 'https://crutchanalyse.com/w2n5uxyv5?key=421e53b34da32e5044e25f26baddab45';
     const labels = ['Server 1','Server 2','Server 3','Server 4','Server 5'];
     bar.innerHTML = labels.map(l=>`<a href="${url}" target="_blank" rel="noopener">${l}</a>`).join('');
   }
-
   function matchSlug(sl, fx){
     const h = slug(fx.home?.name || '');
     const a = slug(fx.away?.name || '');
     return sl === `${h}-vs-${a}` || sl === `${a}-vs-${h}`;
   }
-
   async function fixturesFor(isoDate){
     const ymd = isoToYMD(isoDate);
     const urls = [
@@ -261,14 +218,13 @@
         if (!r.ok) continue;
         const t = await r.text();
         let data;
-        try{ data = JSON.parse(t); }catch{ continue; }
+        try { data = JSON.parse(t); } catch { continue; }
         if (Array.isArray(data)) return data;
         if (data && Array.isArray(data.fixtures)) return data.fixtures;
       }catch(e){}
     }
     return [];
   }
-
   function applyFixture(fx){
     const hn = fx.home?.name || 'Home';
     const an = fx.away?.name || 'Away';
@@ -278,9 +234,9 @@
     $('awayLogo').src = fx.away?.logo || '/logo.svg';
     $('league').textContent = fx.league?.name || '-';
     $('leagueBadge').textContent = fx.league?.name || '';
-    const prettyStatus = formatStatus(fx.status);
-    $('state').textContent = prettyStatus || '-';
-    $('statusLine').textContent = prettyStatus || '';
+    const pretty = formatStatus(fx.status);
+    $('state').textContent = pretty || '-';
+    $('statusLine').textContent = pretty || '';
     $('kickoff').textContent = fx.start_utc ? new Date(fx.start_utc).toLocaleString() : '-';
     renderServers(slug(hn + '-vs-' + an));
   }
@@ -288,7 +244,7 @@
   async function load(){
     const raw = qs('id') || qs('m') || '';
 
-    // prefill names while loader is shown
+    // prefill names while loader shows
     if (raw){
       const pure = raw.includes('@') ? raw.split('@')[0] : raw;
       const parts = pure.split('-vs-');
@@ -319,9 +275,9 @@
 
     if (found) applyFixture(found);
 
-    // hide loader, show page
-    document.getElementById('kx-loader').classList.add('hidden');
-    document.body.classList.add('ready');
+    // show page, hide loader
+    $('kx-loader').classList.add('hidden');
+    $('page').style.display = 'block';
   }
 
   load();
